# helloWorld

./: .gitignore  .ninja_deps  .ninja_log  CMakeCache.txt  CMakeLists.txt  README.org  build.ninja  build.sh  cmake_install.cmake
headers/: test.hpp
src/: main.cpp
